# space_editor

./: Cargo.toml
examples/: rapier3d_example.rs
modules/bevy_rapier3d_plugin/: Cargo.toml
modules/bevy_rapier3d_plugin/src/: collider.rs  geometry.rs  lib.rs  registry.rs  spatial_query.rs
modules/bevy_rapier3d_plugin/src/joint/: generic_joint.rs  local_anchor_marker.rs  mod.rs  name_map.rs  prebaf.rs
src/: lib.rs
